@@ -124,7 +124,19 @@ void scatter_layer<TensorDataType,Layout,Device>::setup_dims(DataReaderMetaData&
   // Tensor dimensions
   const auto& input0_dims = this->get_input_dims(0);
   const auto& input1_dims = this->get_input_dims(1);
+
+  // Check if value matrix is 1D or 2D
+
+  const auto is_values_1D = input0_dims.size() == 1;
+  const auto is_values_2D = input0_dims.size() == 2;
+
+
   const auto& output_dims = this->get_output_dims();
+  // Check if output matrix is 1D or 2D 
+
+  const auto is_output_1D = output_dims.size() == 1;
+  const auto is_output_2D = output_dims.size() == 2;
+
   auto dims_to_str = [] (const std::vector<int>& dims) -> std::string {
     std::ostringstream ss;
     for (size_t i=0; i<dims.size(); ++i) {
@@ -153,22 +165,22 @@ void scatter_layer<TensorDataType,Layout,Device>::setup_dims(DataReaderMetaData&
 
   // Check that tensors are 1D
   /// @todo Support scattering from/into higher-order tensors
-  if (input1_dims.size() != 1 || (input0_dims.size() != 1 && input0_dims.size() != 2)) {
+  if (input1_dims.size() != 1 || (!is_values_1D && !is_values_2D)) {
     LBANN_ERROR(
       this->get_type()," layer \"",this->get_name(),"\" ",
       "attempted to scatter from a ",input0_dims.size(),"-D tensor ",
       "(",dims_to_str(input0_dims),"), "
       "but the scatter layer currently only supports ",
-      "scattering from a 1-D and 2-D tensor");
+      "scattering from a 1-D or 2-D tensor");
   }
   // Check if either output is 1D or the first dim matches for input and output
-  if ( output_dims.size() != 1 && (output_dims.size() == 2 && output_dims[0] != input0_dims[0])) {
+  if ( ! is_output_1D && (is_output_2D == 2 && output_dims[0] != input0_dims[0])) {
     LBANN_ERROR(
       this->get_type()," layer \"",this->get_name(),"\" ",
       "attempted to scatter into a ",output_dims.size(),"-D tensor ",
       "(",dims_to_str(output_dims),"), "
       "but the scatter layer currently only supports ",
-      "scattering into a 1-D and 2-D tensor");
+      "scattering into a 1-D or 2-D tensor");
   }
 
 }
